force-app/main/default/objects/chargebee__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>API Keys are essential when you have to authenticate while trying to connect to Chargebee&#39;s API.

You can find your API keys in the web interface under Settings &gt; API and Webhooks &gt; API Keys</description>
    <inlineHelpText>API Keys are essential when you have to authenticate your session while trying to connect to Chargebee&#39;s API.

You can find your API keys in the web interface under Settings &gt; API and Webhooks &gt; API Keys</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>