force-app/main/default/objects/chargebee__c/fields/Settings_JSON__c.field-meta.xml
<CustomField>
    <fullName>Settings_JSON__c</fullName>
    <description>All chargebee site settings and configurations in JSON</description>
    <label>Settings JSON</label>
    <type>TextArea</type>
</CustomField>