force-app/main/default/objects/chargebee__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Chargebee Username</description>
    <inlineHelpText>Chargebee Username</inlineHelpText>
    <label>User Name</label>
    <required>true</required>
    <type>Email</type>
</CustomField>